--- a/4lab.ipynb
+++ b/4lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -13,15 +13,23 @@
      "text": [
       "Параметр: Среднее время в системе.\n",
       "\n",
-      "Текущие значения среднего и оценки 4.422 ± 0.5751598868795492\n",
-      "Ожидаемое количество репликаций: 166\n",
-      "\n",
-      "Текущие значения среднего и оценки 4.522469879518073 ± 0.10113247038096626\n",
-      "Точность не достигнута, keep rollin\n",
-      "Ожидаемое количество репликаций: 170\n",
-      "\n",
-      "Текущие значения среднего и оценки 4.522662721893491 ± 0.09956918632800288\n",
-      "Всего запусков было произведено 169\n"
+      "Текущие значения среднего и оценки 5.0840000000000005 ± 1.1391074514659862\n",
+      "Ожидаемое количество репликаций: 64874\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-4-cb2b78a6fbf6>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m    206\u001B[0m \u001B[1;31m# проверим первоначальную оценку\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    207\u001B[0m \u001B[1;32mwhile\u001B[0m \u001B[0mmean_confidence_interval\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdata\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m>\u001B[0m \u001B[0mepsilon\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 208\u001B[1;33m     \u001B[0mdata\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcheck_estimation\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mruns\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdata\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    209\u001B[0m     \u001B[1;32mif\u001B[0m \u001B[1;32mnot\u001B[0m \u001B[0misinstance\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdata\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mint\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    210\u001B[0m         \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'Точность не достигнута, keep rollin'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-4-cb2b78a6fbf6>\u001B[0m in \u001B[0;36mcheck_estimation\u001B[1;34m(runs, data)\u001B[0m\n\u001B[0;32m    184\u001B[0m \u001B[1;32mdef\u001B[0m \u001B[0mcheck_estimation\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mruns\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdata\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    185\u001B[0m     \u001B[1;32mfor\u001B[0m \u001B[0mi\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mruns\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 186\u001B[1;33m         \u001B[0mdata\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdata\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mget_simulated_value\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    187\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0mmean_confidence_interval\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdata\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m<\u001B[0m \u001B[0mepsilon\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    188\u001B[0m             \u001B[0mget_mean_and_estimation\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdata\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<__array_function__ internals>\u001B[0m in \u001B[0;36mappend\u001B[1;34m(*args, **kwargs)\u001B[0m\n",
+      "\u001B[1;32mc:\\users\\ya\\pycharmprojects\\pythonimlabs\\venv\\lib\\site-packages\\numpy\\lib\\function_base.py\u001B[0m in \u001B[0;36mappend\u001B[1;34m(arr, values, axis)\u001B[0m\n\u001B[0;32m   4669\u001B[0m         \u001B[0mvalues\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mravel\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mvalues\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   4670\u001B[0m         \u001B[0maxis\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0marr\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mndim\u001B[0m\u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 4671\u001B[1;33m     \u001B[1;32mreturn\u001B[0m \u001B[0mconcatenate\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0marr\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mvalues\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0maxis\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0maxis\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   4672\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   4673\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<__array_function__ internals>\u001B[0m in \u001B[0;36mconcatenate\u001B[1;34m(*args, **kwargs)\u001B[0m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -220,7 +228,7 @@
     "\n",
     "\n",
     "total_runs = 5\n",
-    "epsilon = 0.1\n",
+    "epsilon = 0.01\n",
     "print('Параметр: Среднее время в системе.')\n",
     "\n",
     "data = np.array([])\n",
@@ -230,7 +238,7 @@
     "get_mean_and_estimation(data)\n",
     "runs = get_needed_runs(epsilon, data)\n",
     "\n",
-    "print(\"Ожидаемое количество репликаций:\", total_runs+runs)\n",
+    "print(\"Ожидаемое количество репликаций:\", runs)\n",
     "# проверим первоначальную оценку\n",
     "while mean_confidence_interval(data)[1] > epsilon:\n",
     "    data = check_estimation(runs, data)\n",
@@ -238,7 +246,7 @@
     "        print('Точность не достигнута, keep rollin')\n",
     "        total_runs += runs\n",
     "        runs = get_needed_runs(epsilon, data)\n",
-    "        print(\"Ожидаемое количество репликаций:\", total_runs+runs)\n",
+    "        print(\"Ожидаемое количество репликаций:\", runs)\n",
     "    else:\n",
     "        total_runs += data\n",
     "print('Всего запусков было произведено', total_runs)"
